@@ -1,32 +1,19 @@
 package com.zor07.nofapp.api.v1;
 
 import com.zor07.nofapp.api.v1.dto.PracticeDto;
-import com.zor07.nofapp.practice.Practice;
-import com.zor07.nofapp.practice.PracticeRepository;
-import com.zor07.nofapp.practice.UserPractice;
-import com.zor07.nofapp.practice.UserPracticeKey;
-import com.zor07.nofapp.practice.UserPracticeRepository;
+import com.zor07.nofapp.practice.*;
 import com.zor07.nofapp.security.SecurityUtils;
 import com.zor07.nofapp.user.User;
 import com.zor07.nofapp.user.UserService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.DeleteMapping;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.PutMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 import javax.persistence.EntityNotFoundException;
 import javax.transaction.Transactional;
 import java.security.Principal;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/v1/practice")
@@ -48,17 +35,16 @@ public class PracticeController {
 
     @GetMapping
     public List<PracticeDto> getPractices(@RequestParam(defaultValue = "false") final boolean isPublic,
-                                          final Principal principal) throws Exception{
-        final var user = getUser(principal);
+                                          final Principal principal) {
+        final var user = userService.getUser(principal);
 
         final var practices = isPublic
                 ? practiceRepository.findByIsPublic(true)
                 : userPracticeRepository.findAllByUserId(user.getId()).stream()
-                                        .map(UserPractice::getPractice)
-                                        .collect(Collectors.toList());
+                                        .map(UserPractice::getPractice).toList();
 
         return practices.stream()
-                .map(practice -> PracticeDto.toDto(practice))
+                .map(PracticeDto::toDto)
                 .toList();
     }
 
@@ -69,7 +55,7 @@ public class PracticeController {
             if (practice.isPublic()) {
                 return new ResponseEntity<>(PracticeDto.toDto(practice), HttpStatus.OK);
             } else {
-                final var user = getUser(principal);
+                final var user = userService.getUser(principal);
                 if (userPracticeRepository.findByUserAndPractice(user, practice) != null) {
                     return new ResponseEntity<>(PracticeDto.toDto(practice), HttpStatus.OK);
                 }
@@ -85,7 +71,7 @@ public class PracticeController {
         try {
             final var practice = practiceRepository.getById(practiceId);
             if (practice.isPublic()) {
-                final var user = getUser(principal);
+                final var user = userService.getUser(principal);
                 if (userPracticeRepository.findByUserAndPractice(user, practice) == null) {
                     userPracticeRepository.save(
                             new UserPractice(new UserPracticeKey(user.getId(), practiceId), user, practice));
@@ -105,7 +91,7 @@ public class PracticeController {
     @PostMapping(consumes = "application/json")
     @Transactional
     public ResponseEntity<PracticeDto> savePractice(@RequestBody final PracticeDto practiceDto, final Principal principal) {
-        final var user = getUser(principal);
+        final var user = userService.getUser(principal);
         Practice practice;
         if (practiceDto.isPublic) {
             if (!SecurityUtils.isUserAdmin(user)) {
@@ -122,7 +108,7 @@ public class PracticeController {
     @PutMapping(consumes = "application/json")
     @Transactional
     public ResponseEntity<Void> updatePractice(@RequestBody final PracticeDto practiceDto, final Principal principal) {
-        final var user = getUser(principal);
+        final var user = userService.getUser(principal);
         if (practiceDto.id == null) {
             return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
         }
@@ -141,7 +127,7 @@ public class PracticeController {
     @DeleteMapping("/{practiceId}")
     @Transactional
     public ResponseEntity<Void> deletePractice(@PathVariable final Long practiceId, final Principal principal) {
-        final var user = getUser(principal);
+        final var user = userService.getUser(principal);
         try {
             final var practice = practiceRepository.getById(practiceId);
             if (SecurityUtils.isUserAdmin(user)) {
@@ -180,10 +166,4 @@ public class PracticeController {
     private boolean isUsersPractice(final User user, final Practice practice) {
         return userPracticeRepository.findByUserAndPractice(user, practice) != null;
     }
-
-    private User getUser(final Principal principal) {
-        final var username = principal.getName();
-        return userService.getUser(username);
-    }
-
 }
